--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <!-- Scripts -->
 <script src="lib/d3v5.min.js"></script>
 <script src="lib/underscore-min.js"></script>
+<script src="lib/share-behavior.js"></script>
 <script src="js/main.js"></script>
 
 
