--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Title</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 
 
     <!-- Links-->
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
-
-
 <body>
+
+<header>
+    <div id="left-side">
+        <a class="texty-logo" href="https://texty.org.ua/">
+            <img class="desktop-only" src="img/textylogo.svg" alt="Тексти.org.ua"/>
+        </a>
+        <div class=""><a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/"><span>КОРОНОВІРУС</span></a></div>
+        <div class=""><a href="https://texty.org.ua/tag/dezinformatsija/"><span>#Інфовійна</span></a></div>
+    </div>
+    <div class="soc">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank" class="share-btn">
+            <i class="fab fa-facebook-square"></i></a>
+        <a href="https://twitter.com/intent/tweet?text=" target="_blank" class="share-btn">
+            <i class="fab fa-twitter-square"></i></a>
+    </div>
+</header>
+
     <main>
     <h1>Коронавірус: хворі в Україні та світі</h1>
 
