header та footer

--- a/index.html
+++ b/index.html
@@ -4,65 +4,176 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Title</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <title>Коронавірус: хворі в Україні та світі</title>
 
+    <!-- OpenGraph Meta Tags -->
+    <meta property="fb:app_id" content="329250623807149"/>
+    <meta property="og:site_name" content="ТЕКСТИ.ORG.UA"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title"
+          content="Коронавірус: хворі в Україні та світі"/>
+    <meta property="og:image" content="https://texty.github.io/covid-19/img/cover.png"/>
+    <meta property="og:description"
+          content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах"/>
+    <meta property="og:url" content="https://texty.github.io/covid-19/"/>
+
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:site" content="@textyorgua"/>
+    <meta property="twitter:account_id" content="49572937"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:url" content="https://texty.github.io/covid-19/">
+    <meta name="twitter:title"
+          content="Коронавірус: хворі в Україні та світі"/>
+    <meta name="twitter:description"
+          content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах"/>
+    <meta name="twitter:image:src" content="https://texty.github.io/covid-19/img/cover.png"/>
+    <meta name="twitter:image:width" content="1200"/>
+    <meta name="twitter:image:height" content="630"/>
+
+
+    <!-- Other Meta Tags -->
+    <meta name="title"
+          content="Коронавірус: хворі в Україні та світі">
+    <meta name="description"
+          content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах">
 
 
     <!-- Links-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-
-<header>
-    <div id="left-side">
+   <header>
         <a class="texty-logo" href="https://texty.org.ua/">
             <img class="desktop-only" src="img/textylogo.svg" alt="Тексти.org.ua"/>
         </a>
-        <div class=""><a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/"><span>КОРОНОВІРУС</span></a></div>
-        <div class=""><a href="https://texty.org.ua/tag/dezinformatsija/"><span>#Інфовійна</span></a></div>
-    </div>
-    <div class="soc">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank" class="share-btn">
-            <i class="fab fa-facebook-square"></i></a>
-        <a href="https://twitter.com/intent/tweet?text=" target="_blank" class="share-btn">
-            <i class="fab fa-twitter-square"></i></a>
-    </div>
-</header>
+
+        <nav class="rubrics-container">
+            <div class="rubric r1"><a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/"><span>КОРОНОВІРУС</span></a></div>
+            <div class="rubric r2"><a href="https://texty.org.ua/tag/dezinformatsija/"><span>#Інфовійна</span></a></div>
+            <div class="rubric r3"></div>
+        </nav>
+        <div class="soc">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.github.io/covid-19/" target="_blank" class="share-btn">
+                <i class="fab fa-facebook-square"></i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://texty.github.io/covid-19/" target="_blank" class="share-btn">
+                <i class="fab fa-twitter-square"></i></a>
+        </div>
+    </header>
+
 
     <main>
-    <h1>Коронавірус: хворі в Україні та світі</h1>
+        <h1>Коронавірус: хворі в Україні та світі</h1>
+        <h3>Вірус в Україні. Зафіксована швидкість його поширення: кількість хворих подвоюється кожні 2-3 дні. Уже невдовзі ми побачимо, чи спрацювало запровадження карантину в нашій країні. Якщо карантин ефективний, то поширення вірусу має відбуватися повільніше. І це можна відобразити візуально. Пропонуємо вам порівняти траєкторію зростання кількості хворих у нас та в інших країнах.</h3>
+        <p>Ми запозичили ідею для інфографіки у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а перший летальний. В результаті отримали цікавий патерн.</p>
+        <p>В інших країнах на графіці перший смертельний випадок був зафіксований, коли кількість діагностованих випадків перевалила далеко за сотню.</p>
+        <p>Однак зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні. Можна припустити, що на момент першої смерті в Україні хворих було суттєво більше (і тоді крива для нашої країни має бути вищою та пролягати на рівні кривих більшості інших країн). Схожа на українську картина – в Ірані та Болгарії (в Ірані теж велика проблема з тестами). Щодо динаміки для нашої країни, про це наразі говорити рано – поки що є мало даних.</p>
 
-    <h3>Вірус в Україні. Зафіксована швидкість його поширення: кількість хворих подвоюється кожні 2-3 дні. Уже невдовзі ми побачимо, чи спрацювало запровадження карантину в нашій країні. Якщо карантин ефективний, то поширення вірусу має відбуватися повільніше. І це можна відобразити візуально – тому ми запускаємо серію інфографік, на яких будемо порівнювати траєкторію зростання кількості хворих у нас та в інших країнах.</h3>
+        <div id="chart_wrapper">
+            <h3>COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
+            <p>Зверніть увагу: графік для України сягає значно нижче за графіки інших країн. Це пов’язано з тим, що першу смерть зафіксували, коли було визначено ще дуже мало хворих. Ймовірно, це наслідок відсутності тестування. Можна припустити, що на час першої смерті хворих в Україні було значно більше</p>
+            <div id="chart">
 
-    <p>Ми запозичили ідею для інфографіки у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а перший летальний. В результаті отримали цікавий патерн.</p>
+            </div>
 
-    <p>В інших країнах на графіці перший смертельний випадок був зафіксований, коли кількість діагностованих випадків перевалила далеко за сотню.</p>
+            <p style="text-align: right; font-size: 14px;">Дані: https://github.com/CSSEGISandData/COVID-19/</p>
+        </div>
 
-    <p>Однак зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні. Можна припустити, що на момент першої смерті в Україні хворих було суттєво більше (і тоді крива для нашої країни має бути вищою та пролягати на рівні кривих більшості інших країн). Схожа на українську картина – в Ірані та Болгарії (в Ірані теж велика проблема з тестами). Щодо динаміки для нашої країни, про це наразі говорити рано – поки що є мало даних.</p>
+        <p>Раніше ми писали, що Україна займає останнє місце за кількістю тестів на коронавірус серед 50 країн, щодо яких збирається статистика.</p>
+        <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
 
 
-    <div id="chart_wrapper">
-        <h3>COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
-        <p>Зверніть увагу: графік для України сягає значно нижче за графіки інших країн. Це пов’язано з тим, що першу смерть зафіксували, коли було визначено             ще дуже мало хворих. Ймовірно, це наслідок відсутності тестування. Можна припустити, що на час першої смерті хворих в Україні було значно більше</p>
-
-        <div id="chart"></div>
-
-        <p style="text-align: right; font-size: 14px;">Дані: https://github.com/CSSEGISandData/COVID-19/</p>
+    <div class="donate-us">
+        <a class="donate-button" href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXlkb25hdGUiLCJwdWJsaWNfa2V5IjoiaTc2NjUwNTYyODI3IiwiYW1vdW50IjoiMTUwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCf0L7QttC10YDRgtCy0LAiLCJ0eXBlIjoiZG9uYXRlIiwibGFuZ3VhZ2UiOiJ1ayJ9&signature=tTFrEUyI4WV5l3N7G%2BYg5keUaXU%3D" target="_blank">
+            <p class="donate-p">Пожертвувати</p></a>
+            <p>TEXTY.ORG.UA — незалежне видання без навʼязливої реклами й замовних матеріалів. Щоб працювати далі, нам потрібна ваша підтримка.
+            <a href="https://texty.org.ua/support/#subscription">Також ви можете зробити пожертву щомісячною</a></p>
     </div>
 
-
-    <p>Раніше ми писали, що Україна займає останнє місце за кількістю тестів на коронавірус серед 50 країн, щодо яких збирається статистика.</p>
-
-    <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
-    </main>
+</main>
 
 
-<!-- Scripts -->
-<script src="lib/d3v5.min.js"></script>
-<script src="lib/underscore-min.js"></script>
-<script src="lib/share-behavior.js"></script>
-<script src="js/main.js"></script>
+
+    <footer>
+        <div id="logo-copyright">
+            <a class="texty-logo" href="/">
+                <img class="desktop-only" src="img/white_logo.svg" alt="Тексти.org.ua"/>
+
+            </a>
+            <div class="copyright">
+                <p>&copy; 2010—2020 Texty.org.ua</p>
+            </div>
+
+            <p id="license">Матеріали ТЕКСТИ.org.ua можна використовувати згідно ліцензії <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons із зазначенням авторства, CC BY</a> (переклад ліцензії <a href="https://creativecommons.org/licenses/by/4.0/legalcode.uk" target="_blank">українською</a>). Велике прохання ставити гіперпосилання в першому чи другому абзаці вашого матеріалу.</p>
+        </div>
+
+        <div id="guide-block">
+            <ul class="links1">
+                <li><a href="https://texty.org.ua/articles/">Статті</a>
+                    <a href="https://texty.org.ua/articles/feed.xml">(RSS)</a>
+                </li>
+                <li><a href="https://texty.org.ua/fragments/">Фрагменти</a>
+                    <a href="https://texty.org.ua/fragments/feed.xml">(RSS)</a>
+                </li>
+                <li><a href="https://texty.org.ua/projects">Журналістика даних</a></li>
+                <li><a href="https://texty.org.ua/d/socio">Фальшиві соціологи</a></li>
+            </ul>
+
+            <ul class="links2">
+                <li><a href="https://fgz.texty.org/">Фейкогриз</a></li>
+                <li><a href="https://texty.org.ua/tag/dezinformatsija/">Дезінформація</a></li>
+                <li><a href="https://texty.org.ua/tag/eng/">#English</a></li>
+                <li><a href="https://texty.org.ua/archive-books/">Архів книг</a></li>
+            </ul>
+
+            <ul class="links3">
+                <li><a href="https://texty.org.ua/support" target="_blank">Підтримай нас!</a></li>
+                <li><a href="http://texty.org.ua/donate/#/" target="_blank" >Наш дата-арт</a></li>
+                <li><a href="https://texty.org.ua/tag/hrafik-dnja/">Графік Дня</a></li>
+                <li><a href="https://texty.org.ua/archive-blogs/">Архів блогів</a></li>
+            </ul>
+        </div>
+
+
+        <div id="social_buttons">
+                <p class="piece-title">Стежити:</p>
+                <a href="https://www.facebook.com/TEXTY.org.ua/" target="_blank">
+                    <img src="img/facebook.png" alt="Тексти.org.ua - Facebook">
+                </a>
+                <a href="https://www.instagram.com/texty.org.ua/" target="_blank">
+                    <img src="img/instagram.png" alt="Тексти.org.ua - Instagram">
+                </a>
+                <a href="https://telegram.me/textyorgua" target="_blank">
+                    <img src="img/telegram.png" alt="Тексти.org.ua - Telegram">
+                </a>
+                <a href="https://twitter.com/textyorgua" target="_blank">
+                    <img src="img/twitter.png" alt="Тексти.org.ua - Twitter">
+                </a>
+        </div>
+    </footer>
+
+
+    <!-- Scripts -->
+    <script src="lib/d3v5.min.js"></script>
+    <script src="lib/underscore-min.js"></script>
+    <script src="lib/share-behavior.js"></script>
+    <script src="js/main.js"></script>
+
+
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-18136548-1']);
+        _gaq.push(['_trackPageview']);
+        (function () {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 
 
 </body>
