header та footer

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title"
           content="Коронавірус: хворі в Україні та світі"/>
-    <meta property="og:image" content="https://texty.github.io/covid-19/img/cover.png"/>
+    <meta property="og:image" content="https://texty.org.ua/d/2020/covid-19/img/cover.png"/>
     <meta property="og:description"
           content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах"/>
-    <meta property="og:url" content="https://texty.github.io/covid-19/"/>
+    <meta property="og:url" content="https://texty.org.ua/d/2020/covid-19/"/>
 
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:site" content="@textyorgua"/>
     <meta property="twitter:account_id" content="49572937"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:url" content="https://texty.github.io/covid-19/">
+    <meta name="twitter:url" content="https://texty.org.ua/d/2020/covid-19/">
     <meta name="twitter:title"
           content="Коронавірус: хворі в Україні та світі"/>
     <meta name="twitter:description"
           content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах"/>
-    <meta name="twitter:image:src" content="https://texty.github.io/covid-19/img/cover.png"/>
+    <meta name="twitter:image:src" content="https://texty.org.ua/d/2020/covid-19/img/cover.png"/>
     <meta name="twitter:image:width" content="1200"/>
     <meta name="twitter:image:height" content="630"/>
 
@@ -55,9 +55,9 @@
             <div class="rubric r3"></div>
         </nav>
         <div class="soc">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.github.io/covid-19/" target="_blank" class="share-btn">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.org.ua/d/2020/covid-19/" target="_blank" class="share-btn">
                 <i class="fab fa-facebook-square"></i></a>
-            <a href="https://twitter.com/intent/tweet?text=https://texty.github.io/covid-19/" target="_blank" class="share-btn">
+            <a href="https://twitter.com/intent/tweet?text=https://texty.org.ua/d/2020/covid-19/" target="_blank" class="share-btn">
                 <i class="fab fa-twitter-square"></i></a>
         </div>
     </header>
