--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Коронавірус: хворі в Україні та світі</title>
+    <title>Вірус: хворі в Україні та світі. Оновлюється</title>
 
     <!-- OpenGraph Meta Tags -->
     <meta property="fb:app_id" content="329250623807149"/>
     <meta property="og:site_name" content="ТЕКСТИ.ORG.UA"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title"
-          content="Коронавірус: хворі в Україні та світі"/>
+          content="Вірус: хворі в Україні та світі. Оновлюється"/>
     <meta property="og:image" content="https://texty.org.ua/d/2020/covid-19/img/cover.png"/>
     <meta property="og:description"
-          content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах"/>
+          content="Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах"/>
     <meta property="og:url" content="https://texty.org.ua/d/2020/covid-19/"/>
 
 
@@ -24,9 +24,9 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:url" content="https://texty.org.ua/d/2020/covid-19/">
     <meta name="twitter:title"
-          content="Коронавірус: хворі в Україні та світі"/>
+          content="Вірус: хворі в Україні та світі. Оновлюється"/>
     <meta name="twitter:description"
-          content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах"/>
+          content="Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах"/>
     <meta name="twitter:image:src" content="https://texty.org.ua/d/2020/covid-19/img/cover.png"/>
     <meta name="twitter:image:width" content="1200"/>
     <meta name="twitter:image:height" content="630"/>
@@ -34,9 +34,9 @@
 
     <!-- Other Meta Tags -->
     <meta name="title"
-          content="Коронавірус: хворі в Україні та світі">
+          content="Вірус: хворі в Україні та світі. Оновлюється">
     <meta name="description"
-          content="Зафіксована швидкість поширення коронавірусу: кількість хворих подвоюється кожні 2-3 дні. Слідкуйте за траєкторію зростання кількості хворих у нас та в інших країнах">
+          content="Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах">
 
 
     <!-- Links-->
@@ -64,15 +64,19 @@
 
 
     <main>
-        <h1>Коронавірус: хворі в Україні та світі</h1>
-        <h3>Вірус в Україні. Зафіксована швидкість його поширення: кількість хворих подвоюється кожні 2-3 дні. Уже невдовзі ми побачимо, чи спрацювало запровадження карантину в нашій країні. Якщо карантин ефективний, то поширення вірусу має відбуватися повільніше. І це можна відобразити візуально. Пропонуємо вам порівняти траєкторію зростання кількості хворих у нас та в інших країнах.</h3>
-        <p>Ми запозичили ідею для інфографіки у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а перший летальний. В результаті отримали цікавий патерн.</p>
-        <p>В інших країнах на графіці перший смертельний випадок був зафіксований, коли кількість діагностованих випадків перевалила далеко за сотню.</p>
-        <p>Однак зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні. Можна припустити, що на момент першої смерті в Україні хворих було суттєво більше (і тоді крива для нашої країни має бути вищою та пролягати на рівні кривих більшості інших країн). Схожа на українську картина – в Ірані та Болгарії (в Ірані теж велика проблема з тестами). Щодо динаміки для нашої країни, про це наразі говорити рано – поки що є мало даних.</p>
+        <h1>Вірус: хворі в Україні та світі. Оновлюється</h1>
+        <h3>Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах.
+        </h3>
+        <p>Ми <a href="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F9c58dd44-6c77-11ea-89df-41bea055720b?fit=scale-down&quality=highest&source=next&width=1260" target="_blank">запозичили ідею</a> для інфографіки у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а першу смерть. В результаті отримали цікавий патерн.</p>
+        <p>В інших країнах з цієї графіки перша смерть сталася, коли кількість діагностованих випадків перевалила далеко за сотню.
+        </p>
+        <p>Однак зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні.
+        </p>
+        <p>Можна припустити, що на момент першої смерті в Україні хворих було суттєво більше (і тоді крива для нашої країни має бути вищою та пролягати на рівні кривих більшості інших країн). Схожа на українську картина – в Ірані та Болгарії (в Ірані теж велика проблема з тестами). Щодо динаміки для нашої країни, про це наразі говорити рано – поки що є мало даних.</p>
 
         <div id="chart_wrapper">
             <h3>COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
-            <p>Зверніть увагу: графік для України сягає значно нижче за графіки інших країн. Це пов’язано з тим, що першу смерть зафіксували, коли було визначено ще дуже мало хворих. Ймовірно, це наслідок відсутності тестування. Можна припустити, що на час першої смерті хворих в Україні було значно більше</p>
+            <p>У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
             <div id="chart">
 
             </div>
@@ -80,7 +84,8 @@
             <p style="text-align: right; font-size: 14px;">Дані: https://github.com/CSSEGISandData/COVID-19/</p>
         </div>
 
-        <p>Раніше ми писали, що Україна займає останнє місце за кількістю тестів на коронавірус серед 50 країн, щодо яких збирається статистика.</p>
+        <p>Раніше ми <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">писали</a>, що Україна займає останнє місце за кількістю тестів на коронавірус серед 50 країн, щодо яких збирається статистика.
+        </p>
         <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
 
 
@@ -174,6 +179,7 @@
             s.parentNode.insertBefore(ga, s);
         })();
     </script>
+
 
 
 </body>
