--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </a>
 
         <nav class="rubrics-container">
-            <div class="rubric r1"><a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/"><span>КОРОНОВІРУС</span></a></div>
+            <div class="rubric r1"><a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/"><span>КОРОНАВІРУС</span></a></div>
             <div class="rubric r2"><a href="https://texty.org.ua/tag/dezinformatsija/"><span>#Інфовійна</span></a></div>
             <div class="rubric r3"></div>
         </nav>
