додала карти і чернетку графіків

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
 
 
-    <main>
+   <main>
         <h1>Вірус: хворі в Україні та світі. Оновлюється</h1>
         <h3>Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах.
         </h3>
@@ -83,8 +83,22 @@
             <h3>COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
             <p>У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
             <div id="chart"></div>
-
             <p class="source">Дані: https://github.com/CSSEGISandData/COVID-19/</p>
+        </div>
+
+        <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
+
+        <h3 style="margin-top: 50px;">Детальніше про ситуацію в Україні</h3>
+        <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіціні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче взяті дані з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">Tableau</a></p>
+
+         <div id="charts">
+            <div id="total_amount">
+                <h3>Кумулятивна кількість випадків по днях</h3>
+                <p>Кількість зворих почала зростати з середини березня, пік очікується на кінець квітня</p>
+            </div>
+             <div id="growth_speed">
+                 <p style="width: 50%">Тут буде графік швидкості зростання, вигляд якого поки невідомий</p>
+             </div>
         </div>
 
 
@@ -97,7 +111,7 @@
                 <div class="map" id="ch_suspected"></div>
             </div>
             <div>
-                <p>По опорних лікарнях*</p>
+                <p>По лікарнях*</p>
                 <div class="map" id="hex_suspected"></div>
             </div>
 
@@ -107,7 +121,7 @@
                 <div class="map" id="ch_confirmed"></div>
             </div>
             <div>
-                <p>По опорних лікарнях*</p>
+                <p>По лікарнях*</p>
                 <div class="map" id="hex_confirmed"></div>
             </div>
 
@@ -117,16 +131,14 @@
                 <div class="map" id="ch_died"></div>
             </div>
             <div>
-                <p>По опорних лікарнях*</p>
+                <p>По лікарнях*</p>
                 <div class="map" id="hex_died"></div>
             </div>
-
             <div class="source">Дані: https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660</div>
         </div>
 
         <p>Раніше ми <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">писали</a>, що Україна займає останнє місце за кількістю тестів на коронавірус серед 50 країн, щодо яких збирається статистика.
         </p>
-        <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
 
 
     <div class="donate-us">
@@ -208,6 +220,7 @@
     <script src="lib/share-behavior.js"></script>
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/growth_speed.js"></script>
 
 
     <script type="text/javascript">
