--- a/index.html
+++ b/index.html
@@ -89,52 +89,52 @@
         <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
 
         <h3 style="margin-top: 50px;">Детальніше про ситуацію в Україні</h3>
-        <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіціні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче взяті дані з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">Tableau</a></p>
+        <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента.</p>
 
          <div id="charts">
             <div id="total_amount">
-                <h3>Кумулятивна кількість випадків по днях</h3>
-                <p>Кількість зворих почала зростати з середини березня, пік очікується на кінець квітня</p>
+                <h3>Динаміка захворюванності по країні</h3>
+                <p>Перший випадок захворювання був зареєстрований 31 січня, з середини березня кількість хворих почала активно зростати.</p>
             </div>
              <div id="growth_speed">
-                 <p style="width: 50%">Тут буде графік швидкості зростання, вигляд якого поки невідомий</p>
+                 <p>У світі вже мільйон випадків COVID-19, в Україні понад 800 офіційно зареєстрованих. Враховуючи досвід інших країн, головне питання, чи матимемо ми на кінець квітня десятки тисяч хворих. Поки будь-які <a href="https://texty.org.ua/fragments/100643/chomu-nema-i-ne-peredbachayetsya-realistychnyh-modelej-smertnosti-vid-covid-19/">спроби побудувати реалістичну модель</a> розвитку подій малоймовірні, залишається берегти себе та рідних і спостерігати.</p>
              </div>
         </div>
 
 
-
-
         <div id="maps">
-            <h3>Кількість осіб з підозрою на covid-19. Станом на <span id="">01-04-2020</span>.</h3>
+            <h3>Кількість осіб з підозрою на covid-19 по регіонах. Усього cтаном на <span class="current-date">01/04</span> – <span class="numeral" id="suspected_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_suspected"></div>
             </div>
             <div>
-                <p>По лікарнях*</p>
+                <p>За координатами лікарні</p>
                 <div class="map" id="hex_suspected"></div>
             </div>
 
-            <h3>Кількість діагностованих випппадків захворювання на covid-19. Станом на <span id="">01-04-2020</span>.</h3>
+            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date">01/04</span> – <span class="numeral" id="confirmed_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_confirmed"></div>
             </div>
             <div>
-                <p>По лікарнях*</p>
+                <p>За координатами лікарні*</p>
+                <p class="source">*хворі на самоізоляції привʼязані до координат обласного центру</p>
+
                 <div class="map" id="hex_confirmed"></div>
             </div>
 
-            <h3>Кількість смертей серед осіб з підтверженим covid-19. Станом на <span id="">01-04-2020</span>.</h3>
+            <h3>Кількість смертей серед осіб з підтверженим covid-19. Усього cтаном на <span class="current-date">01/04</span> – <span class="numeral" id="deaths_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_died"></div>
             </div>
             <div>
-                <p>По лікарнях*</p>
+                <p>За координатами лікарні</p>
                 <div class="map" id="hex_died"></div>
             </div>
-            <div class="source">Дані: https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660</div>
+            <!--<div class="source">Дані: https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660</div>-->
         </div>
 
         <p>Раніше ми <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">писали</a>, що Україна займає останнє місце за кількістю тестів на коронавірус серед 50 країн, щодо яких збирається статистика.
@@ -214,16 +214,18 @@
     <!-- Scripts -->
     <script src="lib/d3v5.min.js"></script>
     <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
-   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
-   <script src="lib/underscore-min.js"></script>
+    <script src="lib/underscore-min.js"></script>
     <script src="lib/share-behavior.js"></script>
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
     <script src="js/growth_speed.js"></script>
 
 
-    <script type="text/javascript">
+
+
+   <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-18136548-1']);
         _gaq.push(['_trackPageview']);
