додала карти і чернетку графіків

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>Вірус: хворі в Україні та світі. Оновлюється</h1>
         <h3>Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах.
         </h3>
-        <p>Ми <a href="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F9c58dd44-6c77-11ea-89df-41bea055720b?fit=scale-down&quality=highest&source=next&width=1260" target="_blank">запозичили ідею</a> для інфографіки у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а першу смерть. В результаті отримали цікавий патерн.</p>
+        <p>Для першого графіка ми <a href="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F9c58dd44-6c77-11ea-89df-41bea055720b?fit=scale-down&quality=highest&source=next&width=1260" target="_blank">запозичили ідею</a> для інфографіки у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а першу смерть. В результаті отримали цікавий патерн.</p>
         <p>В інших країнах з цієї графіки перша смерть сталася, коли кількість діагностованих випадків перевалила далеко за сотню.
         </p>
         <p>Однак зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні.
