--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <p>Можна припустити, що на момент першої смерті в Україні хворих було суттєво більше (і тоді крива для нашої країни має бути вищою та пролягати на рівні кривих більшості інших країн). Схожа на українську картина – в Ірані та Болгарії (в Ірані теж велика проблема з тестами). Щодо динаміки для нашої країни, про це наразі говорити рано – поки що є мало даних.</p>
 
         <div id="chart_wrapper">
-            <h3>COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
-            <p>У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
-            <div id="chart"></div>
+            <h3 class="set-width">COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
+            <p class="set-width">У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
+            <div class="set-width" id="chart"></div>
             <p class="source">Дані: https://github.com/CSSEGISandData/COVID-19/</p>
         </div>
 
@@ -92,18 +92,18 @@
         <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента.</p>
 
          <div id="charts">
-            <div id="total_amount">
-                <h3>Динаміка захворюванності по країні</h3>
-                <p>Перший випадок захворювання був зареєстрований 31 січня, з середини березня кількість хворих почала активно зростати.</p>
-            </div>
              <div id="growth_speed">
-                 <p>У світі вже мільйон випадків COVID-19, в Україні понад 800 офіційно зареєстрованих. Враховуючи досвід інших країн, головне питання, чи матимемо ми на кінець квітня десятки тисяч хворих. Поки будь-які <a href="https://texty.org.ua/fragments/100643/chomu-nema-i-ne-peredbachayetsya-realistychnyh-modelej-smertnosti-vid-covid-19/">спроби побудувати реалістичну модель</a> розвитку подій малоймовірні, залишається берегти себе та рідних і спостерігати.</p>
+                 <h3 class="">Динаміка зростання кількості хворих</h3>
+                 <p class="">Перший випадок захворювання був діагностований 31 січня, але помітне зростання почалося у другій половині березня. Сірі пунктирні лінії моделюють ситуації, коли подвоєння випадків захворювання відбувається щоденно/щодва дні/щотри дні. Як видно з графіка. Зараз кількість хворих подвоюється кожні 2-3 дні.</p>
+
              </div>
+
+             <div></div>
         </div>
 
 
         <div id="maps">
-            <h3>Кількість осіб з підозрою на covid-19 по регіонах. Усього cтаном на <span class="current-date">01/04</span> – <span class="numeral" id="suspected_amount"></span></h3>
+            <h3>Кількість осіб з підозрою на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_suspected"></div>
@@ -113,7 +113,7 @@
                 <div class="map" id="hex_suspected"></div>
             </div>
 
-            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date">01/04</span> – <span class="numeral" id="confirmed_amount"></span></h3>
+            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_confirmed"></div>
@@ -125,7 +125,7 @@
                 <div class="map" id="hex_confirmed"></div>
             </div>
 
-            <h3>Кількість смертей серед осіб з підтверженим covid-19. Усього cтаном на <span class="current-date">01/04</span> – <span class="numeral" id="deaths_amount"></span></h3>
+            <h3>Кількість смертей серед осіб з підтверженим covid-19. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="deaths_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_died"></div>
@@ -215,6 +215,7 @@
     <script src="lib/d3v5.min.js"></script>
     <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
 
     <script src="lib/underscore-min.js"></script>
     <script src="lib/share-behavior.js"></script>
